--- a/package.json
+++ b/package.json
@@ -6,18 +6,26 @@
   "author": "Marcelo Carvalho Pinto",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-node_modules server.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "jest"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
+    "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "eslint": "^8.12.0",
+    "eslint-config-google": "^0.14.0",
     "jest": "^27.5.1",
+    "prisma": "^3.11.1",
     "ts-jest": "^27.1.4",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.17.0",
-    "eslint-config-airbnb-base": "^15.0.0"
+    "@prisma/client": "3.11.1",
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "express": "^4.17.3"
   }
 }
